--- a/app/src/main/res/layout/item_music_list.xml
+++ b/app/src/main/res/layout/item_music_list.xml
@@ -3,15 +3,25 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="horizontal"
     android:gravity="top"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:padding="@dimen/activity_horizontal_margin"
+    android:descendantFocusability="blocksDescendants"
+    >
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView1_icon"
-        android:src="@mipmap/music"
-        android:layout_marginLeft="10dp"
-        />
+        android:descendantFocusability="blocksDescendants">
+
+        <ImageView
+            android:id="@+id/imageView1_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:clickable="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:src="@mipmap/music" />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
