--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,15 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_contact"
-
+        android:id="@+id/ilike"
+        android:icon="@mipmap/xin_bai"
         android:showAsAction="ifRoom"
-        android:title="@string/action_contact"/>
+        android:title="我喜欢"/>
     <item
-        android:id="@+id/action_sss"
-
-        android:showAsAction="ifRoom"
-        android:title="@string/action_contact"/>
+        android:id="@+id/near_play"
+        android:icon="@mipmap/history"
+        android:showAsAction="never"
+        android:title="最近播放"/>
 
 </menu>
     <!--android:icon="@drawable/ic_action_user"-->
