--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,24 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar"></style>
+    <style name="AppBaseTheme" parent="android:Theme.Light"></style>
 
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:windowBackground">@color/background_window</item>
         <item name="android:actionBarStyle">@style/ActionBarStyle</item>
     </style>
 
+    <style name="AppTheme2" parent="AppBaseTheme">
+        <item name="android:windowBackground">@color/background_window</item>
+        <item name="android:actionBarStyle">@style/ActionBarStyle.BlueActionBarStyle</item>
+    </style>
+
     <style name="ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:icon">@mipmap/app_logo2</item>
         <item name="android:background">#FF666666</item>
+    </style>
+
+    <style name="ActionBarStyle.BlueActionBarStyle" parent="ActionBarStyle">
+        <item name="android:background">#FF3F9FE0</item>
     </style>
 
 </resources>
